--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,12 @@ build/*
 .DS_Store
 .cache/
 compile_commands.json
+
+# CMake 一時ビルドディレクトリ
+build_linux/
+build_macos/
+build_win/
+
+build_linux/
+build_macos/
+build_win/
